Created services for retrieving scores
