# src/main/resources/static/api-docs.yaml
@@ -8,6 +8,35 @@ servers:
   - url: http://localhost:8090
     description: Development server
 paths:
+  /score/{db}/{id}:
+    get:
+      summary: Returns a score from a database
+      tags:
+        - Score management
+      parameters:
+        - name: db
+          in: path
+          description: Database to get the score from. Currently only "primus" is available.
+          required: true
+          schema:
+            type: string
+        - name: id
+          in: path
+          description: ID of the score
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: JSON with the score data
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Score"
+        '401':
+          $ref: "#/components/responses/UnauthorizedError"
+        '404':
+          description: Score or database does not exist
   /score/{db}/{user}/pending:
     get:
       summary: Returns a random score
